--- a/src/login/create-account-step-4.html
+++ b/src/login/create-account-step-4.html
@@ -59,7 +59,7 @@
                 </div>
             
                 <div class="flex flex-col pt-[80px] self-stretch gap-5 justify-center items-center flex-1">
-                    <a href="/src/login/create-account-step-4.html" class="no-underline block w-full">
+                    <a href="/src/home-feed/home.html" class="no-underline block w-full">
                         <button 
                             class="w-full px-6 py-2 rounded-4xl bg-neutral-500 shadow-md
                             items-center gap-2 backdrop-blur-xl font-px-regular 
