--- a/src/login/create-account-step-4.html
+++ b/src/login/create-account-step-4.html
@@ -10,15 +10,15 @@
     <!-- Top bar -->
     <div class="bg-neutral-1000 w-screen h-screen flex flex-shrink-0 justify-center flex-col md:backdrop-blur-md rounded-[16px] pt-[14px]">
 
-            <div class="flex justify-between items-center w-screen h-11 pt-[14px] pr-[14.5px] pl-5 pb-3 flex-shrink-0 gap-[234.606px]">
-                <div class="text-neutral-50 font-px-regular font-bold w-14 h-5 pt-4 pl-5">
+            <div class="flex justify-between items-center w-screen h-11 pt-[14px] pr-[14.5px] pl-5 pb-3 flex-shrink-0">
+                <div class="text-neutral-50 font-px-regular font-bold w-14 h-5 pt-4">
                 9:41
                 </div>
                 <img src="\public\images\bar.svg" alt="notification" class="w-[67px] h-[11.5px] flex-shrink-0 pt-4">
             </div>
             
             <div class="w-full h-full gap-3 flex flex-col items-start flex-shrink-0 pt-0 px-[15px] pb-5 mx-auto ">
-                <div class="flex py-3 px-0 items-center gap-5 self-stretch mb-[12px]">
+                <div class="flex px-0 items-center gap-5 self-stretch mb-[12px]">
                     <a href="/src/index.html">
                         <div class="w-6 h-6 shrink-0">
                             <img src="/public/images/closeX.svg" alt="return">
