--- a/src/login/create-account-step-1.html
+++ b/src/login/create-account-step-1.html
@@ -8,9 +8,9 @@
   </head>
     <body class="bg-neutral-1000 w-screen flex flex-shrink-0 items-start h-screen gap-3 flex-col md:backdrop-blur-md">
     <!-- Top bar -->
-    <div class="bg-neutral-1000 w-screen h-screen flex flex-shrink-0 justify-center flex-col md:backdrop-blur-md rounded-[16px] pt-[14px]">
+    <div class="bg-neutral-1000 w-screen h-screen flex flex-shrink-0 flex-col md:backdrop-blur-md rounded-[16px]">
 
-            <div class="flex justify-between items-center w-screen h-11 pt-[14px] pr-[14.5px] pl-5 pb-3 flex-shrink-0 gap-[234.606px]">
+            <div class="flex justify-between items-center w-screen h-11 pr-[14.5px] pl-5 pb-3 flex-shrink-0 gap-[234.606px]">
                 <div class="text-neutral-50 font-px-regular font-bold w-14 h-5 pt-4 pl-5">
                 9:41
                 </div>
@@ -70,7 +70,7 @@
                     </div>
                 </div>
             </div>
-                <div class="flex flex-col pt-[120px] px-[20px] self-stretch gap-2.5 justify-end items-center flex-1">
+                <div class="flex fixed inset-x-0 bottom-0 h-auto flex-col pt-[120px] px-[20px] self-stretch gap-2.5 justify-end items-center flex-1">
                     <a href="/src/login/create-account-step-2.html" class="no-underline block w-full">
                         <button 
                             class="w-full px-6 py-2 rounded-4xl bg-neutral-50 shadow-md
