--- a/src/compose-tweet/tweet.html
+++ b/src/compose-tweet/tweet.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Compose Tweet</title>
-    <link href="../../../dist/output.css" rel="stylesheet" />
+    <link href="../../dist/output.css" rel="stylesheet" />
 </head>
 
 <body class="bg-neutral-1000">
@@ -21,7 +21,7 @@
             </div>
 
             <div class="w-[67px] h-[11.5px] shrink-0">
-                <img src="\public\images\bar.svg" alt="icons">
+                <img src="../../public/images/bar.svg" alt="icons">
             </div>
 
         </div>
@@ -31,13 +31,13 @@
         <!-- logo and post button -->
         <div class="flex w-full justify-between items-center">
             <!-- x logo -->
-            <a href="/src/home-feed/home.html" class="no-underline block">
+            <a href="../../src/home-feed/home.html" class="no-underline block">
                 <div class="w-7 h-7">
-                <img src="/public/images/closeX.svg" alt="X logo">
+                <img src="../../public/images/closeX.svg" alt="X logo">
             </div>
             </a>
             <!-- post button -->
-            <a href="/src/home-feed/home.html" class="no-underline block">
+            <a href="../../src/home-feed/home.html" class="no-underline block">
                     <button class="inline-flex py-2 px-6 justify-center items-center gap-2.5 rounded-4xl bg-twitter-blue hover:bg-twitter-blue-hover disabled:bg-twitter-blue-disabled disabled:opacity-50">
                         <div class="text-neutral-50 text-center  font-px-regular text-sm leading-normal font-bold">
                             Post
@@ -49,7 +49,7 @@
 
         <!-- what's happening -->
         <div class="flex w-full py-2 px-0 items-center gap-3 ">
-            <img class="w-9 h-9 flex-shrink-0 rounded-[200px] bg-cover bg-no-repeat" src="/public/images/user-avatar-2.png" alt="User Avatar">           
+            <img class="w-9 h-9 flex-shrink-0 rounded-[200px] bg-cover bg-no-repeat" src="../../public/images/user-avatar-2.png" alt="User Avatar">           
             
             <div class="flex w-full items-center flex-row shrink-0 basis-0 self-stretch ">
                 <input class="text-neutral-50 flex items-center flex-shrink-0 font-px-regular text-base leading-normal font-normal border-transparent bg-transparent focus:outline-none focus:text-neutral-50 transition-colors duration-300 ease-in-out"
