--- a/src/index.html
+++ b/src/index.html
@@ -6,20 +6,22 @@
     <title>100x</title>
     <link href="../dist/output.css" rel="stylesheet" />
   </head>
-  <body class="bg-neutral-1000 w-96.5 h-197.5 flex-shrink-0 justify-center ">
+  <body class="bg-neutral-1000 w-screen flex flex-shrink-0 items-start h-screen gap-3 flex-col md:backdrop-blur-md">
     <!-- Top bar -->
-    <section class="flex justify-between w-full h-11">
-      <div class="text-neutral-50 text-center font-px-regular font-bold w-14 h-5 pt-4 pl-5">
-        9:41
-      </div>
-      <img src="\public\images\bar.svg" alt="notification" class="w-16 h-3 flex-shrink-0 pt-4 pl-80">
-    </section>
+    <div class="bg-neutral-1000 w-screen h-screen flex flex-shrink-0 flex-col md:backdrop-blur-md rounded-[16px]">
+
+            <div class="flex justify-between items-center w-screen h-11 pl-2 flex-shrink-0">
+                <div class="text-neutral-50 font-px-regular font-bold w-14 h-5 pt-4 pl-5">
+                9:41
+                </div>
+                <img src="../public/images/bar.svg" alt="notification" class="w-[67px] h-[11.5px] flex-shrink-0 pt-4">
+            </div>
 
     <!-- Heading -->
     <section class="flex w-97 px-4 py-3 justify-center items-baseline">
 
-      <img src="\public\images\login-100.svg" alt="100" class="w-10 h-4 text-neutral-50">
-      <img src="\public\images\login-group-27162.svg" alt="x" class="w-3 h-3.25 text-neutral-50">
+      <img src="../public/images/login-100.svg" alt="100" class="w-10 h-4 text-neutral-50">
+      <img src="../public/images/login-group-27162.svg" alt="x" class="w-3 h-3.25 text-neutral-50">
     
     </section>
     
@@ -36,7 +38,7 @@
       </div>
     </section>
 
-    <a href="/src/login/create-account-step-1.html" class="no-underline block w-full">
+    <a href="../src/login/create-account-step-1.html" class="no-underline block w-full">
       <button 
       class="w-full h-9 px-6 py-2 rounded-4xl bg-neutral-50 shadow-md flex 
       items-center justify-center gap-2 backdrop-blur-xl font-px-regular font-bold self-stretch text-base">
