--- a/src/login/create-account-step-3.html
+++ b/src/login/create-account-step-3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>100x</title>
-    <link href="../../../dist/output.css" rel="stylesheet" />
+    <link href="../../dist/output.css" rel="stylesheet" />
   </head>
     <body class="bg-neutral-1000 w-screen flex flex-shrink-0 items-start h-screen gap-3 flex-col md:backdrop-blur-md">
     <!-- Top bar -->
@@ -14,14 +14,14 @@
                 <div class="text-neutral-50 font-px-regular font-bold w-14 h-5 pt-4 pl-5">
                 9:41
                 </div>
-                <img src="\public\images\bar.svg" alt="notification" class="w-[67px] h-[11.5px] flex-shrink-0 pt-4">
+                <img src="../../public/images/bar.svg" alt="notification" class="w-[67px] h-[11.5px] flex-shrink-0 pt-4">
             </div>
             
             <div class="w-[390px] h-[824px] gap-3 flex flex-col items-start flex-shrink-0 pt-0 px-[15px] pb-5 ">
                 <div class="flex py-3 px-0 items-center gap-5 self-stretch mb-[12px]">
-                    <a href="/src/index.html">
+                    <a href="../../src/index.html">
                         <div class="w-6 h-6 shrink-0">
-                            <img src="/public/images/closeX.svg" alt="return">
+                            <img src="../../public/images/closeX.svg" alt="return">
                         </div>
                     </a>
 
@@ -60,7 +60,7 @@
                 </div>
             
                 <div class="flex fixed inset-x-0 bottom-0 h-auto flex-col pt-[80px] self-stretch gap-5 justify-end items-center flex-1">
-                    <a href="/src/login/create-account-step-4.html" class="no-underline block w-full">
+                    <a href="../../src/login/create-account-step-4.html" class="no-underline block w-full">
                         <button 
                             class="w-full px-6 py-2 rounded-4xl bg-neutral-500 shadow-md
                             items-center gap-2 backdrop-blur-xl font-px-regular 
